Solicitud de login dinámico
Se desarrollo doming  de este servicio.

--- a/coredata-bank/microservice-corebank-logindinamic/pom.xml
+++ b/coredata-bank/microservice-corebank-logindinamic/pom.xml
@@ -78,6 +78,11 @@
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId> 
+		</dependency>
 
 	</dependencies>
 
